# python-chatbot

./: .gitignore  app.py  chainlit-app.py  config.toml  foo.txt  n  pyproject.toml  run.py  utils.py
chroma_db/: chroma.sqlite3
chroma_langchain_db/: chroma.sqlite3
testfiles/: ragtest.txt
