[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "filetype>=1.2.0",
    "fpdf>=1.7.2",
    "groq>=1.0.0",
    "httpx>=0.28.1",
    "pathlib>=1.0.1",
    "pdf2image>=1.17.0",
    "pillow>=12.1.1",
    "pypdf>=6.7.0",
    "pytesseract>=0.3.13",
]
