[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chainlit>=2.10.0",
    "chromadb>=1.5.5",
    "dotenv>=0.9.9",
    "filetype>=1.2.0",
    "fpdf>=1.7.2",
    "groq==0.30.0",
    "httpx>=0.28.1",
    "langchain>=1.2.13",
    "langchain-classic>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-text-splitters>=1.1.1",
    "pathlib>=1.0.1",
    "pdf2image>=1.17.0",
    "pillow>=12.1.1",
    "pypdf>=6.7.0",
    "pytesseract>=0.3.13",
    "regex>=2026.2.28",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.55.0",
]
